// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EllipsisText /> should match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c1 {
  position: relative;
  font-weight: bold;
  font-size: 18px;
  overflow: hidden;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  height: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;

exports[`<EllipsisText /> should match the snapshot 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c1 {
  position: relative;
  font-weight: bold;
  font-size: 18px;
  overflow: hidden;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  height: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Test
  </div>
</div>
`;
